Ingress setup on Baremetal/default-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-backend
  namespace: app-space
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: default-backend
  template: 
    metadata: 
      labels:
        app: default-backend
    spec: 
      containers: 
      - image: kodekloud/ecommerce:wear
        name: food-backend
        ports: 
        - containerPort: 8080
          protocol: TCP
