Ingress setup on Baremetal/wear-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-wear
  namespace: app-space
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: webapp-wear
  template: 
    metadata: 
      labels:
        app: webapp-wear
    spec: 
      containers: 
      - image: kodekloud/ecommerce:apparels
        name: wear-webapp
        ports: 
        - containerPort: 8080
          protocol: TCP
